build: add first.cc to cmake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(learning-wasi
 	VERSION 0.1 
 	DESCRIPTION "Project for learning about WASI ")
 
-set(LLVM_HOME $ENV{HOME}/opt CACHE STRING "llvm home")
+set(LLVM_HOME $ENV{HOME}/work/wasm/wasi-sdk/download/wasi-sdk-8.0 CACHE STRING "llvm home")
 set(LLVM_BIN ${LLVM_HOME}/bin CACHE STRING "llvm bin")
 set(WASI_SYSROOT ${LLVM_HOME}/share/wasi-sysroot CACHE STRING "wasi-sysroot")
 set(TRIPLE wasm32-wasi CACHE STRING "triple")
@@ -24,10 +24,11 @@ set(CMAKE_SYSROOT ${WASI_SYSROOT} CACHE STRING "wasi-sysroot")
 set(CMAKE_C_COMPILER_TARGET ${TRIPLE} CACHE STRING "c target")
 set(CMAKE_CXX_COMPILER_TARGET ${TRIPLE} CACHE STRING "c++ target")
 set(CMAKE_C_FLAGS "-v" CACHE STRING "cflags")
-set(CMAKE_CXX_FLAGS "-v -std=c++11" CACHE STRING "c++flags")
+set(CMAKE_CXX_FLAGS "-v -std=c++11 -I${WASI_SYSROOT}/include/c++/v1" CACHE STRING "c++flags")
 set(CMAKE_EXE_LINKER_FLAGS "-Wl,--no-threads" CACHE STRING "ld flags")
 
 add_executable(first.wasm src/first.c)
+add_executable(firstcxx.wasm src/first.cc)
 
 message(STATUS "summary of build options:
 
