--- a/wit-bindgen-example/Makefile
+++ b/wit-bindgen-example/Makefile
@@ -6,8 +6,10 @@ component:
 	-o example-component.wasm
 
 inspect-wit:
-	wasm-tools component wit example-component.wasm
+	@wasm-tools component wit example-component.wasm
 
+inspect-wat:
+	@wasm-tools print target/wasm32-unknown-unknown/debug/wit_bindgen_example.wasm | rustfilt
 
 clean:
 	cargo clean
