Add inspect-component-wat target
Signed-off-by: Daniel Bevenius <daniel.bevenius@gmail.com>

--- a/wit-bindgen-example/Makefile
+++ b/wit-bindgen-example/Makefile
@@ -8,8 +8,11 @@ component:
 inspect-wit:
 	@wasm-tools component wit example-component.wasm
 
-inspect-wat:
+inspect-wasm-wat:
 	@wasm-tools print target/wasm32-unknown-unknown/debug/wit_bindgen_example.wasm | rustfilt
+
+inspect-component-wat:
+	@wasm-tools print example-component.wasm | rustfilt
 
 clean:
 	cargo clean
