Add wasi targets to wit-bindgen example
Signed-off-by: Daniel Bevenius <daniel.bevenius@gmail.com>

--- a/wit-bindgen-example/Makefile
+++ b/wit-bindgen-example/Makefile
@@ -1,9 +1,17 @@
 build:
 	cargo build --target wasm32-unknown-unknown
 
+build-wasi:
+	cargo build --target wasm32-wasi
+
 component:
 	wasm-tools component new ./target/wasm32-unknown-unknown/debug/wit_bindgen_example.wasm \
-	-o example-component.wasm
+	-o example-wasi-component.wasm
+
+component-wasi:
+	wasm-tools component new ./target/wasm32-wasi/debug/wit_bindgen_example.wasm \
+	--adapt wasi_snapshot_preview1.wasm \
+	-o example-wasi-component.wasm
 
 inspect-wit:
 	@wasm-tools component wit example-component.wasm
