Add inspect-wasi-wat target
Signed-off-by: Daniel Bevenius <daniel.bevenius@gmail.com>

--- a/wit-bindgen-example/Makefile
+++ b/wit-bindgen-example/Makefile
@@ -19,6 +19,9 @@ inspect-wit:
 inspect-wasm-wat:
 	@wasm-tools print target/wasm32-unknown-unknown/debug/wit_bindgen_example.wasm | rustfilt
 
+inspect-wasi-wat:
+	@wasm2wat target/wasm32-wasi/debug/wit_bindgen_example.wasm | rustfilt
+
 inspect-component-wat:
 	@wasm-tools print example-component.wasm | rustfilt
 
