Update preview2 prototype .wasm files
Signed-off-by: Daniel Bevenius <daniel.bevenius@gmail.com>

--- a/wasmtime-example/wasm-component/Makefile
+++ b/wasmtime-example/wasm-component/Makefile
@@ -8,13 +8,18 @@ component:
 	wasm-tools component new ./target/wasm32-unknown-unknown/debug/wasm_component.wasm \
 	-o example-wasm-component.wasm
 
-component-wasi:
+component-wasi-reactor:
 	wasm-tools component new ./target/wasm32-wasi/debug/wasm_component.wasm \
-	--adapt wasi_snapshot_preview1.wasm \
-	-o example-wasi-component.wasm
+	--adapt wasi_snapshot_preview1=wasi_preview1_component_adapter.reactor.wasm \
+	-o example-wasi-component-reactor.wasm
+
+component-wasi-command:
+	wasm-tools component new ./target/wasm32-wasi/debug/wasm_component.wasm \
+	--adapt wasi_snapshot_preview1=wasi_preview1_component_adapter.command.wasm \
+	-o example-wasi-component-command.wasm
 
 inspect-wit:
-	@wasm-tools component wit example-component.wasm
+	@wasm-tools component wit example-wasm-component.wasm
 
 inspect-wasm-wat:
 	@wasm-tools print target/wasm32-unknown-unknown/debug/wasm_component.wasm | rustfilt
@@ -22,8 +27,11 @@ inspect-wasm-wat:
 inspect-wasi-wat:
 	@wasm2wat target/wasm32-wasi/debug/wasm_component.wasm | rustfilt
 
-inspect-component-wat:
-	@wasm-tools print example-component.wasm | rustfilt
+inspect-wasm-component-wat:
+	@wasm-tools print example-wasm-component.wasm | rustfilt
+
+inspect-wasi-component-wat:
+	@wasm-tools print example-wasi-component.wasm | rustfilt
 
 clean:
 	cargo clean
