Add target to inspect wit of the wasi component
Signed-off-by: Daniel Bevenius <daniel.bevenius@gmail.com>

--- a/wasmtime-example/wasm-component/Makefile
+++ b/wasmtime-example/wasm-component/Makefile
@@ -8,18 +8,27 @@ component:
 	wasm-tools component new ./target/wasm32-unknown-unknown/debug/wasm_component.wasm \
 	-o example-wasm-component.wasm
 
+
+# The wasm32-wasi target supports wasi_snapshot_preview1 which is based on
+# .witx files. This is not compatible with the component model. But we can
+# create a component model from these by adapting the wasm module that
+# wasm32-wasi generates. This is done using the --adapt option.
 component-wasi-reactor:
 	wasm-tools component new ./target/wasm32-wasi/debug/wasm_component.wasm \
 	--adapt wasi_snapshot_preview1=wasi_preview1_component_adapter.reactor.wasm \
 	-o example-wasi-component-reactor.wasm
 
+# This is currently not used as there is not _start in the current example.
 component-wasi-command:
 	wasm-tools component new ./target/wasm32-wasi/debug/wasm_component.wasm \
 	--adapt wasi_snapshot_preview1=wasi_preview1_component_adapter.command.wasm \
 	-o example-wasi-component-command.wasm
 
-inspect-wit:
+inspect-wasm-wit:
 	@wasm-tools component wit example-wasm-component.wasm
+
+inspect-wasi-wit:
+	@wasm-tools component wit example-wasi-component-reactor.wasm
 
 inspect-wasm-wat:
 	@wasm-tools print target/wasm32-unknown-unknown/debug/wasm_component.wasm | rustfilt
