--- a/wit-bindgen-example/rust/Cargo.toml
+++ b/wit-bindgen-example/rust/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
-wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "299131ae2d6655c49138bfab2c4469650763ef3b", features = ["component-model"] }
-wasi-common = { git = "https://github.com/bytecodealliance/preview2-prototyping"}
 tokio = { version = "1", features = ["full"] }
+
+wasmtime = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasmtime", features = ["component-model"] }
+wasmtime-wasi = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasi", features = ["preview1-on-preview2", "tokio", "sync"]}
+wasi-common = { path = "/home/danielbevenius/work/wasm/wasmtime/crates/wasi-common"}
 
 [[bin]]
 name = "main"
