Update python example to be able to run
Signed-off-by: Daniel Bevenius <daniel.bevenius@gmail.com>

--- a/wit-bindgen-example/python/Makefile
+++ b/wit-bindgen-example/python/Makefile
@@ -1,5 +1,5 @@
 bindings:
-	python3 ~/work/wasm/wasmtime-py/wasmtime/bindgen ../example-component.wasm --out-dir dist
+	python3 ~/work/wasm/wasmtime-py/wasmtime/bindgen ../example-wasi-component.wasm --out-dir dist
 
 run: 
 	python3 example.py
