--- a/wasi-example/Cargo.toml
+++ b/wasi-example/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2021"
 
 [dependencies]
 wasmtime = "18.0.1"
+
+[[bin]]
+name = "basic"
+path = "src/main.rs"
+
+[[bin]]
+name = "host"
+path = "src/host-func.rs"
