--- a/wasi-example/Cargo.toml
+++ b/wasi-example/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["wasi-module"] }
 [package]
 name = "wasi-example"
 version = "0.1.0"
@@ -6,6 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+wasi-common = "18.0.1"
 wasmtime = "18.0.1"
 
 [[bin]]
@@ -15,3 +17,7 @@ path = "src/main.rs"
 [[bin]]
 name = "host"
 path = "src/host-func.rs"
+
+[[bin]]
+name = "wasi"
+path = "src/main-wasi.rs"
