--- a/wasi-example/Cargo.toml
+++ b/wasi-example/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wasi-common = "18.0.1"
+wasmtime-wasi = "18.0.1"
 wasmtime = "18.0.1"
 
 [[bin]]
